unpackaged/main/default/objects/Referrals__c/fields/Already_using_Openstax__c.field-meta.xml
<CustomField>
    <fullName>Already_using_Openstax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already using Openstax</label>
    <type>Checkbox</type>
</CustomField>