unpackaged/main/default/objects/Referrals__c/fields/Contact_name_for_fomr__c.field-meta.xml
<CustomField>
    <fullName>Contact_name_for_fomr__c</fullName>
    <label>Contact name for fomr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>