unpackaged/main/default/objects/Referrals__c/fields/Interested_in_OpenStax__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_OpenStax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in OpenStax</label>
    <type>Checkbox</type>
</CustomField>