unpackaged/main/default/objects/Referrals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Name__c</columns>
    <columns>School_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>